Support more types. Support negative integers. Fix multiple explicit mods of the exact same name.

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.30</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+            <version>4.2.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
