One tooltip to rule them all.

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>okhttp-urlconnection</artifactId>
             <version>4.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>4.0.1.Final</version>
+        </dependency>
     </dependencies>
 
     <repositories>
